# trace

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: Employee.tsx  EmployeeCard.tsx  EmployeeDetail.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/user/: [user].tsx
frontend/src/styles/: globals.css
frontend/src/utils/: api.ts  types.ts
server/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  schema.prisma  server.py
server/scripts/: linearFakeData.json  popularSlackData.py  populateLinearData.py  run.sh  userFakeData.json
server/sources/: db_utils.py  linear.py  slack.py
server/utils/: classifier.py  embeddings.py  s3.py
server/views/: graphs.py
